--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
             </div>
             <div class="seccion-4">
                 <h2>Suscríbete!</h2>
+                <div class="cards">
+                    <div class="card-1">
+                        <div class="frente">
+                            <p>Pase Viajero</p>
+                        </div>
+                        <div class="reverso">
+                            
+                        </div>
+                    </div>
+                    <div class="card-2"></div>
+                    <div class="card-3"></div>
+                </div>
                 <p>Estamos orgullosos de contar con la base de datos más grande del mundo lector! Suscríbete y disfruta de la lectura!</p>
             </div>
             <footer>
