finalizacion de secciones

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Somos una empresa que nos dedicamos a recopilar libros de todo el mundo. Estos pasan por un proceso de restauración y recopilación en formato digital.</p>
             </div>
             <div class="seccion-3">
-                <h2>Donde operamos?</h2>
+                <h2>Dónde operamos?</h2>
                 <div class="iconos">
                     <div class="icono-escudo fa-7x fa-flip" style="--fa-animation-duration: 3.5s;">
                         <i class="fa-solid fa-shield-halved"></i>
@@ -46,25 +46,61 @@
                 <p>Contamos con nuestro centro de operaciones en Argentina, donde resguardamos todos los libros y doumentaciones del mundo.</p>
             </div>
             <div class="seccion-4">
-                <h2>Suscríbete!</h2>
-                <div class="cards">
-                    <div class="card-1">
-                        <div class="frente">
-                            <p>Pase Viajero</p>
-                        </div>
-                        <div class="reverso">
-                            
+                <h2>Vive la experiencia de World Books!</h2>
+                <div class="tarjetas">
+                    <div class="tamaño-tarjeta-visitante">
+                        <div class="tarjeta-visitante">
+                            <div class="tarjeta-visitante-frente">
+                                <p style="font-size: 2.5em;">Acceso visitante</p>
+                                <i class="fa-solid fa-id-card-clip fa-5x"></i>
+                            </div>
+                            <div class="tarjeta-visitante-reverso">
+                                <p>Acceso a nuestra plataforma</p>
+                                <p>Admisión de 3 dispositivos</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card-2"></div>
-                    <div class="card-3"></div>
+                    <div class="tamaño-tarjeta-acaparador">
+                        <div class="tarjeta-acaparador">
+                            <div class="tarjeta-acaparador-frente">
+                                <p style="font-size: 2.5em;">Acceso Acaparador</p>
+                                <i class="fa-solid fa-book-open-reader fa-5x"></i>
+                            </div>
+                            <div class="tarjeta-acaparador-reverso">
+                                <p>Acceso a nuestra plataforma</p>
+                                <p>Admisión de 5 dispositivos</p>
+                                <p>Acceso a copias físicas</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tamaño-tarjeta-coleccionista">
+                        <div class="tarjeta-coleccionista">
+                            <div class="tarjeta-coleccionista-frente">
+                                <p style="font-size: 2.5em;">Acceso Coleccionista</p>
+                                <i class="fa-solid fa-gem fa-5x"></i>
+                            </div>
+                            <div class="tarjeta-coleccionista-reverso">
+                                <p>Acceso a nuestra plataforma</p>
+                                <p>Admisión de 10 dispositivos</p>
+                                <p>Acceso a copias físicas</p>
+                                <p>Acceso a subastas exclusivas</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <p>Estamos orgullosos de contar con la base de datos más grande del mundo lector! Suscríbete y disfruta de la lectura!</p>
+            </div>
+            <div class="seccion-5">
+                <h2>Haznos llegar tus opiniones y comentanos tu experiencia con nosotros! :)</h2>
+                <div class="redes">
+                    <i class="fa-brands fa-facebook fa-5x"></i>
+                    <i class="fa-brands fa-instagram fa-5x"></i>
+                    <i class="fa-brands fa-square-twitter fa-5x"></i>
+                    <i class="fa-solid fa-square-envelope fa-5x"></i>
+                </div>
             </div>
             <footer>
-                <p>Haznos llegar tus opiniones y comentanos tu experiencia con nosotros! :)</p>
+                <p></p>
             </footer>
-            
         </main>
     </body>
 </html>
