--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <div class="seccion-1">
-                <h1>Saludos visitante! Bienvenid@ a World Books!</h1>
+                <h1>Saludos visitante! Bienvenid@ a <span id="world-books">World Books</span></h1>
                 <div class="planeta-tierra">
                 </div>
             </div>
@@ -48,6 +48,7 @@
             <div class="seccion-4">
                 <h2>Vive la experiencia de World Books!</h2>
                 <div class="tarjetas">
+                    <a href="#" target="_blank">
                     <div class="tamaño-tarjeta-visitante">
                         <div class="tarjeta-visitante">
                             <div class="tarjeta-visitante-frente">
@@ -60,6 +61,8 @@
                             </div>
                         </div>
                     </div>
+                    </a>
+                    <a href="#" target="_blank">
                     <div class="tamaño-tarjeta-acaparador">
                         <div class="tarjeta-acaparador">
                             <div class="tarjeta-acaparador-frente">
@@ -73,6 +76,8 @@
                             </div>
                         </div>
                     </div>
+                    </a>
+                    <a href="#" target="_blank">
                     <div class="tamaño-tarjeta-coleccionista">
                         <div class="tarjeta-coleccionista">
                             <div class="tarjeta-coleccionista-frente">
@@ -87,15 +92,16 @@
                             </div>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
             <div class="seccion-5">
                 <h2>Haznos llegar tus opiniones y comentanos tu experiencia con nosotros! :)</h2>
                 <div class="redes">
-                    <i class="fa-brands fa-facebook fa-5x"></i>
-                    <i class="fa-brands fa-instagram fa-5x"></i>
-                    <i class="fa-brands fa-square-twitter fa-5x"></i>
-                    <i class="fa-solid fa-square-envelope fa-5x"></i>
+                    <a href="#" target="_blank"><i class="fa-brands fa-facebook fa-5x"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-instagram fa-5x"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-square-twitter fa-5x"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-square-envelope fa-5x"></i></a>
                 </div>
             </div>
             <footer>
