arreglo de detalles de html/css y footer

--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="/assets/fontawesome-free-6.2.0-web/css/all.css">
         <title>World Books</title>
-
     </head>
     <body>
         <main>
-            <div class="seccion-1">
-                <h1>Saludos visitante! Bienvenid@ a <span id="world-books">World Books</span></h1>
-                <div class="planeta-tierra">
-                </div>
-            </div>
-            <div class="seccion-2">
+            <section class="seccion-1">
+                <h1>Saludos visitante! Bienvenid@ a <span id="world-books-color">World Books</span></h1>
+                <div class="planeta-tierra"></div>
+            </section>
+            <section class="seccion-2">
                 <h2>Quienes somos?</h2>
                 <div class="iconos">
                     <div class="icono-libro">
@@ -25,12 +23,12 @@
                         <i class="fa-solid fa-rotate fa-7x fa-spin"></i>
                     </div>
                     <div class="icono-base-de-datos">
-                        <i class="fa-solid fa-database fa-7x green-gradient"></i>
+                        <i class="fa-solid fa-database fa-7x animacion-verde-database"></i>
                     </div>
                 </div>
                 <p>Somos una empresa que nos dedicamos a recopilar libros de todo el mundo. Estos pasan por un proceso de restauración y recopilación en formato digital.</p>
-            </div>
-            <div class="seccion-3">
+            </section>
+            <section class="seccion-3">
                 <h2>Dónde operamos?</h2>
                 <div class="iconos">
                     <div class="icono-escudo fa-7x fa-flip" style="--fa-animation-duration: 3.5s;">
@@ -44,8 +42,8 @@
                     </div>
                 </div>
                 <p>Contamos con nuestro centro de operaciones en Argentina, donde resguardamos todos los libros y doumentaciones del mundo.</p>
-            </div>
-            <div class="seccion-4">
+            </section>
+            <section class="seccion-4">
                 <h2>Vive la experiencia de World Books!</h2>
                 <div class="tarjetas">
                     <a href="#" target="_blank">
@@ -94,8 +92,8 @@
                     </div>
                     </a>
                 </div>
-            </div>
-            <div class="seccion-5">
+            </section>
+            <section class="seccion-5">
                 <h2>Haznos llegar tus opiniones y comentanos tu experiencia con nosotros! :)</h2>
                 <div class="redes">
                     <a href="#" target="_blank"><i class="fa-brands fa-facebook fa-5x"></i></a>
@@ -103,9 +101,10 @@
                     <a href="#" target="_blank"><i class="fa-brands fa-square-twitter fa-5x"></i></a>
                     <a href="#" target="_blank"><i class="fa-solid fa-square-envelope fa-5x"></i></a>
                 </div>
-            </div>
+            </section>
             <footer>
-                <p></p>
+                <p>Página diseñada por Pablo Corno</p>
+                <img class="img-perfil-footer" src="/img/cara-perfil.jpg" alt="Pablo Corno">
             </footer>
         </main>
     </body>
